# itsascout

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  sites.csv
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: metadata-profile-missing.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/phases/01-inertia-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-frontend-consolidation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-01-VERIFICATION.md  02-RESEARCH.md
.planning/phases/03-core-view-migration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-interactive-features/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-cleanup-verification/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-infrastructure-models/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-fetch-strategy/: 07-01-PLAN.md  07-01-SUMMARY.md  07-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scrapegrape/: conftest.py  docker-compose.yml  manage.py
scrapegrape/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scrapegrape/ingestion/: admin.py  models.py  services.py  terms_discovery.py  terms_evaluation.py
scrapegrape/publishers/: admin.py  factories.py  forms.py  models.py  serializers.py  tasks.py  url_sanitizer.py  views.py  waf_check.py
scrapegrape/scrapegrape/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
scrapegrape/templates/: base.html
(+124 files in other folders)
